fixed message spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -387,7 +387,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   border-radius: 60px;
 }
 .side-chat-bar {
-  // background-color: #fffa63;
   width: 200px;
   height: 30000px;
   float: left;
@@ -396,7 +395,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-top: 10px;
 }
 #main-chat {
-  background-color: #feffb1;
 }
 .headline-small {
   margin-top: 0;
@@ -415,11 +413,9 @@ h1.full-name {
   margin-left: auto;
   margin-right: auto;
   width: 700px;
-  // background-color: #b2b3ab;
   font-family: Helvetica, sans-serif;
 }
 .chat-bubble {
-  background-color: #fff4b0;
 }
 .chat-text {
   font-size: 16px;
@@ -427,9 +423,6 @@ h1.full-name {
   padding-top: 10px;
 }
 .chat-type-message {
-  // background-color: #b2b3ab;
-  // width: 100%;
-  // height: 200px;
   margin-left: 210px;
 }
 #chat-input {
